feat: added documentation with swagger 2.0 for user endpoints
